--- a/html/index.html
+++ b/html/index.html
@@ -15,17 +15,17 @@
     <h1 id="heading">Edison Motor Co.</h1>
         <!-- Heading -->
         <div class="topnav" id="myTopnav">
-            <a href="html/index.html" class="active">Home</a>
-            <a href="html/about.html">About</a>
-            <a href="html/contact.html">Contact</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
             <div class="dropdown">
               <button class="dropbtn">Vehicles
                 <i class="fa fa-caret-down"></i>
                   </button>
                   <div class="dropdown-content">
-                    <a href="html/vehicles/phono.html">Phono</a>
-                    <a href="html/vehicles/kineto.html">Kineto</a>
-                    <a href="html/vehicles/teleforce.html">Teleforce</a>
+                    <a href="vehicles/phono.html">Phono</a>
+                    <a href="vehicles/kineto.html">Kineto</a>
+                    <a href="vehicles/teleforce.html">Teleforce</a>
                   </div>
             </div>
                 <a href="#about">About</a>
