--- a/html/index.html
+++ b/html/index.html
@@ -16,16 +16,16 @@
         <!-- Heading -->
         <div class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
-            <a href="about.html">About</a>
-            <a href="contact.html">Contact</a>
+            <a href="under_construction.html">About</a>
+            <a href="under_construction.html">Contact</a>
             <div class="dropdown">
               <button class="dropbtn">Vehicles
                 <i class="fa fa-caret-down"></i>
                   </button>
                   <div class="dropdown-content">
-                    <a href="vehicles/phono.html">Phono</a>
-                    <a href="vehicles/kineto.html">Kineto</a>
-                    <a href="vehicles/teleforce.html">Teleforce</a>
+                    <a href="under_construction.html">Phono</a>
+                    <a href="under_construction.html">Kineto</a>
+                    <a href="under_construction.html">Teleforce</a>
                   </div>
             </div>
                 <a href="#about">About</a>
