--- a/html/under_construction.html
+++ b/html/under_construction.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="center">
-        <h1>Sorry, this page is still under construction. Please check back later.</h1>
+        <h1>Sorry, this page is still under construction.<br>Please check back later.</h1>
         <p>Go ahead and click your browser's back button to return to the last page.</p>
     </div>
 </body>
@@ -19,7 +19,7 @@
     }
     .center {
         margin: auto;
-        width: 50%;
+        width: 75%;
         -ms-transform: translate(+0%, +50%);
         transform: translate(+0%, +50%);
     }
