--- a/html/under_construction.html
+++ b/html/under_construction.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada:700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Import font -->
@@ -8,19 +9,36 @@
 </head>
 <body>
     <div class="center">
+        <a href="index.html">
+            <img class="logo" src="../resources/logo.png" alt="Edison Logo">
+        </a>
+        <h1 class="heading">Edison Motors</h1>
         <h1>Sorry, this page is still under construction.<br>Please check back later.</h1>
         <p>Go ahead and click your browser's back button to return to the last page.</p>
     </div>
 </body>
 <style>
-    body {
-        text-align: center;
-        font-family: 'Open Sans', sans-serif;
-    }
     .center {
         margin: auto;
         width: 75%;
         -ms-transform: translate(+0%, +50%);
         transform: translate(+0%, +50%);
     }
+    body {
+        text-align: center;
+        font-family: 'Open Sans', sans-serif;
+    }
+    .center .logo {
+        max-width: 5%;
+        position: relative;
+        left: 5px;
+        top: 5px;
+        }
+    .center .heading {
+        display: inline;
+        font-family: 'Montserrat Subrayada', sans-serif;
+        position: relative;
+        bottom: 10px;
+        left: 10px;
+        }
 </style>
